--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <div class="hero-text">
                     <h1>This website sucks</h1>
                     <p>The website has subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button type="button">Sign up</button>
+                    <button type="button" class="sign-up-button">Sign up</button>
                 </div>
-                <img src="" alt="this is a placeholder for an image">
+                <img src="hero-img-placeholder-400x200.jpg" alt="this is a placeholder for an image">
             </section>
             <section class="random-info">
                 <h2>Some random information</h2>
