--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p>-DT R400</p>
             </blockquote>
+            <div class="cta">
+                <div class="cta-text">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our products by clicking the button right over there! Over there! That's it.</p>
+                </div>
+                <button class="sign-up-button sign-up-cta">Sign up</button>
+            </div>
         </main>
+        <footer>
+            <p>Copyright @ The Odin Project 2021</p>
+        </footer>
     </body>
 </html>
