--- a/index.html
+++ b/index.html
@@ -29,16 +29,24 @@
                 <img src="hero-img-placeholder-400x200.jpg" alt="this is a placeholder for an image">
             </section>
             <section class="random-info">
-                <h2>Some random information</h2>
+                <h2>Some random information.</h2>
                 <div class="random-boxes-container">
-                    <img src="" alt="this is a placeholder for an image">
-                    <p>this is some subtext under an illustration or image</p>
-                    <img src="" alt="this is a placeholder for an image">
-                    <p>this is some subtext under an illustration or image</p>
-                    <img src="" alt="this is a placeholder for an image">
-                    <p>this is some subtext under an illustration or image</p>
-                    <img src="" alt="this is a placeholder for an image">
-                    <p>this is some subtext under an illustration or image</p>
+                    <div class="box">
+                        <img src="info-img-placeholder.jpg" alt="this is a placeholder for an image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                        <img src="info-img-placeholder.jpg" alt="this is a placeholder for an image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                            <img src="info-img-placeholder.jpg" alt="this is a placeholder for an image">
+                            <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                        <img src="info-img-placeholder.jpg" alt="this is a placeholder for an image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
                 </div>
             </section>
             <blockquote class="testimonial">
