--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
                     </div>
                 </div>
             </section>
-            <blockquote class="testimonial">
-                <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p>-DT R400</p>
+            <blockquote class="testimonial-section">
+                <div class="quote-container">
+                    <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Does it look nice?</p>
+                    <p class="quote-author">-DT R400, R2D2</p>
+                </div>
             </blockquote>
             <div class="cta">
                 <div class="cta-text">
