--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="cta">
                 <div class="cta-text">
                     <h2>Call to action! It's time!</h2>
-                    <p>Sign up for our products by clicking the button right over there! Over there! That's it.</p>
+                    <p>Sign up for our products by clicking the button right over there! Over THERE! That's it.</p>
                 </div>
-                <button class="sign-up-button sign-up-cta">Sign up</button>
+                <button class="sign-up-button cta-sign-up">Sign up</button>
             </div>
         </main>
         <footer>
