Style landing page footer and fix header link style

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             </div>
             <div class="header-right">
                 <ul>
-                    <li class="nav-link">header link one</li>
-                    <li class="nav-link">header link two</li>
-                    <li class="nav-link">header link three</li>
+                    <li class="nav-link"><a href="#">header link one</a></li>
+                    <li class="nav-link"><a href="#"> header link two</a></li>
+                    <li class="nav-link"><a href="#">header link three</a></li>
                 </ul>
             </div>
         </header>
@@ -64,7 +64,7 @@
             </div>
         </main>
         <footer>
-            <p>Copyright @ The Odin Project 2021</p>
+            <p>Copyright © The Odin Project 2021</p>
         </footer>
     </body>
 </html>
